--- a/commander.html
+++ b/commander.html
@@ -111,6 +111,96 @@
   /* MARKER */
   .p-marker{width:34px;height:34px;border-radius:50%;border:3px solid rgba(255,255,255,.8);display:flex;align-items:center;justify-content:center;font-size:11px;font-weight:bold;color:#000;box-shadow:0 0 10px rgba(255,255,255,.3);}
   @keyframes pulse{0%,100%{box-shadow:0 0 8px rgba(0,255,136,.5)}50%{box-shadow:0 0 20px rgba(0,255,136,1),0 0 40px rgba(0,255,136,.3)}}
+
+  /* ============================================================
+     MAP CONTROLS — must be above Leaflet (z-index 400+)
+     position:absolute inside #map, top-right corner
+     ============================================================ */
+  #map { position:relative; }
+
+  #map-controls {
+    position:absolute;
+    top:10px;
+    right:10px;
+    z-index:1000;
+    display:flex;
+    gap:6px;
+    align-items:flex-start;
+    /* relative so layer-panel can position off of it */
+  }
+  #layer-toggle-btn { position:relative; }
+  #layer-toggle-btn > #layer-panel,
+  #map-controls > #layer-panel {
+
+  #map-max-btn, #layer-toggle-btn {
+    background:rgba(5,8,16,.92);
+    border:1px solid #1e3a5f;
+    color:#00e5ff;
+    font-family:'Share Tech Mono',monospace;
+    font-size:10px;
+    letter-spacing:1px;
+    padding:6px 10px;
+    cursor:pointer;
+    white-space:nowrap;
+    pointer-events:all;
+  }
+  #map-max-btn:hover, #layer-toggle-btn:hover {
+    background:rgba(0,229,255,.12);
+    border-color:#00e5ff;
+  }
+
+  #layer-wrapper { position:relative; }
+  #layer-panel {
+    position:absolute;
+    top:calc(100% + 4px);
+    right:0;
+    width:200px;
+    background:rgba(5,8,16,.97);
+    border:1px solid #1e3a5f;
+    padding:6px 0;
+    display:none;
+    z-index:1001;
+  }
+  #layer-panel.open { display:block; }
+
+  .lp-section { padding:4px 0; border-bottom:1px solid #0f2035; }
+  .lp-section:last-child { border-bottom:none; }
+  .lp-label {
+    font-family:'Share Tech Mono',monospace;
+    font-size:8px;
+    color:#4a6080;
+    letter-spacing:1px;
+    padding:4px 12px 2px;
+  }
+  .lp-row {
+    display:flex;
+    align-items:center;
+    gap:8px;
+    padding:5px 12px;
+    cursor:pointer;
+    font-family:'Share Tech Mono',monospace;
+    font-size:10px;
+    color:#8aa8c8;
+  }
+  .lp-row:hover { background:rgba(0,229,255,.08); color:#00e5ff; }
+  .lp-check {
+    width:14px;
+    height:14px;
+    border:1px solid #1e3a5f;
+    display:flex;
+    align-items:center;
+    justify-content:center;
+    font-size:9px;
+    flex-shrink:0;
+  }
+  .lp-check.on  { border-color:#00e5ff; color:#00e5ff; }
+  .lp-check.hazard-on { border-color:#ff9900; color:#ff9900; }
+  .lp-name { font-size:10px; }
+  .lp-opacity { flex:1; accent-color:#00e5ff; }
+
+  /* FOOTER transition for fade cycle */
+  #pagong-footer { transition:opacity 1s ease; }
+
 </style>
 </head>
 <body>
@@ -132,6 +222,7 @@
   <!-- Map Controls -->
   <div id="map-controls">
     <button id="map-max-btn" onclick="toggleMapMax()" title="Maximize map">⛶ MAXIMIZE</button>
+    <div id="layer-wrapper">
     <button id="layer-toggle-btn" onclick="toggleLayerPanel()">🗺 LAYERS ▾</button>
     <div id="layer-panel">
       <div class="lp-section">
@@ -170,6 +261,7 @@
       </div>
     </div>
   </div>
+  </div><!-- /layer-wrapper -->
   <!-- Hazard Legend -->
   <div id="hazard-legend">
     <div class="leg-title" id="leg-title">HAZARD LEGEND</div>
